--- a/UnivMedicalRecord/Pages/LaboratoryRecord/EditCholesterolSi.cshtml
+++ b/UnivMedicalRecord/Pages/LaboratoryRecord/EditCholesterolSi.cshtml
@@ -80,7 +80,7 @@
                                 <form class="form-inline" method="post">
                                     Input the Date of the Lab Test (SI): <input asp-for="CholesterolSi.DateRetrieved" type="date" id="LabSIDate">
                                     <button type="button" class="btn btn-dark m-lg-1" style="float: right" data-toggle="modal" data-target=".CholesterolSi">Show Laboratory Test</button>
-                                    <button class="btn btn-dark mb-4" style="float: right" asp-page-handler="Update" type="submit">Submit</button>
+                                    <button class="btn btn-dark m-lg-1" style="float: right" asp-page-handler="Update" type="submit">Submit</button>
                                     <input type="hidden" asp-for="CholesterolSi.Id"/>
                                     <table class="table" style="text-align: center">
                                         <thead class="thead-dark">
@@ -90,139 +90,121 @@
                                             <th scope="col" colspan="2">NORMAL RANGE</th>
                                         </tr>
                                         <tr>
-                                            <th scope="col"></th>
-                                            <th scope="col">S.I.</th>
-                                            <th scope="col">S.I.</th>
+                                            <th scope="col" colspan="4">S.I.</th>
                                         </tr>
                                         </thead>
                                         <tbody>
                                         
                                         <tr>
                                             <td>Cholesterol*</td>
-                                            <td><input asp-for="CholesterolSi.SiCholesterol" type="number" step=".1" min="0" class="form-control"></td>
-                                            <td> > 5.2 mmol/L</td>
+                                            <td><input asp-for="CholesterolSi.SiCholesterol" type="number" step=".1" min="0" class="form-control" style="width: 100%;"></td>
+                                            <td colspan="2"> > 5.2 mmol/L</td>
                                         </tr> 
                                         
                                         <tr>
                                             <td>LDL*</td>
-                                            <td><input asp-for="CholesterolSi.SiLdl" type="number" step=".1" min="0" class="form-control"></td>
-                                            <td> 2.8 - 3.4 mmol/L</td>
+                                            <td><input asp-for="CholesterolSi.SiLdl" type="number" step=".1" min="0" class="form-control" style="width: 100%;"></td>
+                                            <td colspan="2"> 2.8 - 3.4 mmol/L</td>
                                         </tr>                                         
                                          
                                         <tr>
                                             <td>dHDL*</td>
-                                            <td><input asp-for="CholesterolSi.SiDhdl" type="number" step=".1" min="0" class="form-control"></td>
-                                            <td> > 1.0 mmol/L</td>
+                                            <td><input asp-for="CholesterolSi.SiDhdl" type="number" step=".1" min="0" class="form-control" style="width: 100%;"></td>
+                                            <td colspan="2"> > 1.0 mmol/L</td>
                                         </tr>                                          
                                         
                                         <tr>
                                             <td>Triglyceride*</td>
-                                            <td><input asp-for="CholesterolSi.SiTriglyceride" type="number" step=".1" min="0" class="form-control"></td>
-                                            <td> < 1.7 mmol/L</td>
+                                            <td><input asp-for="CholesterolSi.SiTriglyceride" type="number" step=".1" min="0" class="form-control" style="width: 100%;"></td>
+                                            <td colspan="2"> < 1.7 mmol/L</td>
                                         </tr>                  
                                         
                                         <tr>
                                             <td>FBS</td>
-                                            <td><input asp-for="CholesterolSi.SiFbs" type="number" step=".1" min="0" class="form-control"></td>
-                                            <td> 4.1 - 5.9 mmol/L</td>
+                                            <td><input asp-for="CholesterolSi.SiFbs" type="number" step=".1" min="0" class="form-control" style="width: 100%;"></td>
+                                            <td colspan="2"> 4.1 - 5.9 mmol/L</td>
                                         </tr>
 
                                         <tr>
                                             <td>BUN</td>
-                                            <td><input asp-for="CholesterolSi.SiBun" type="number" step=".1" min="0" class="form-control"></td>
-                                            <td> M: 3.2 - 7.1 mmol/L</td>
-                                            <td> F: 2.5 - 6.1 mmol/L</td>
+                                            <td><input asp-for="CholesterolSi.SiBun" type="number" step=".1" min="0" class="form-control" style="width: 100%;"></td>
+                                            <td colspan="2"> M: 3.2 - 7.1 mmol/L<br/>
+                                                             F: 2.5 - 6.1 mmol/L</td>
                                             
                                         </tr>
 
                                         <tr>
                                             <td>Creatinine</td>
-                                            <td><input asp-for="CholesterolSi.SiCreatinine" type="number" step=".1" min="0" class="form-control"></td>
-                                            <td> M: 71 - 133 ummol/Ll</td>
-                                            <td> F: 62 - 106 ummol/L</td>
+                                            <td><input asp-for="CholesterolSi.SiCreatinine" type="number" step=".1" min="0" class="form-control" style="width: 100%;"></td>
+                                            <td colspan="2"> M: 71 - 133 ummol/L<br/>
+                                                             F: 62 - 106 ummol/L</td>
                                         </tr>
 
                                         <tr>
                                             <td>BUA</td>
-                                            <td><input asp-for="CholesterolSi.SiBua" type="number" step=".1" min="0" class="form-control"></td>
-                                            <td> M: 208 - 506 ummol/L</td>
-                                            <td> F: 149 - 369 ummol/L</td>
+                                            <td><input asp-for="CholesterolSi.SiBua" type="number" step=".1" min="0" class="form-control" style="width: 100%;"></td>
+                                            <td colspan="2"> M: 208 - 506 ummol/L<br/>
+                                                             F: 149 - 369 ummol/L</td>
                                         </tr>
 
                                         <tr>
                                             <td>SGOT</td>
-                                            <td></td>
-                                            <td><input asp-for="CholesterolSi.Sgot" type="number" step=".1" min="0" class="form-control"></td>
-                                            <td></td>
-                                            <td> M: 17 - 59 u/L</td>
-                                            <td> F: 14 - 36 u/L</td>
+                                            <td><input asp-for="CholesterolSi.Sgot" type="number" step=".1" min="0" class="form-control" style="width: 100%;"></td>
+                                            <td colspan="2"> M: 17 - 59 u/L<br/>
+                                                             F: 14 - 36 u/L</td>
                                         </tr>
 
                                         <tr>
                                             <td>SGPT</td>
-                                            <td></td>
-                                            <td><input asp-for="CholesterolSi.Sgpt" type="number" step=".1" min="0" class="form-control"></td>
-                                            <td></td>
-                                            <td> M: 21 - 72 u/L</td>
-                                            <td> F: 9 - 52 u/L</td>
+                                            <td><input asp-for="CholesterolSi.Sgpt" type="number" step=".1" min="0" class="form-control" style="width: 100%;"></td>
+                                            <td colspan="2"> M: 21 - 72 u/L<br/>
+                                                             F: 9 - 52 u/L</td>
                                         </tr>
 
                                         <tr>
                                             <td>Amylase</td>
-                                            <td></td>
-                                            <td><input asp-for="CholesterolSi.Amylase" type="number" step=".1" min="0" class="form-control"></td>
-                                            <td></td>
-                                            <td> 330 - 110 mmol/L</td>
+                                            <td><input asp-for="CholesterolSi.Amylase" type="number" step=".1" min="0" class="form-control" style="width: 100%;"></td>
+                                            <td colspan="2"> 330 - 110 mmol/L</td>
                                         </tr>
 
                                         <tr>
                                             <td>CKMB</td>
-                                            <td></td>
-                                            <td><input asp-for="CholesterolSi.Ckmb" type="number" step=".1" min="0" class="form-control"></td>
-                                            <td></td>
-                                            <td> up to 16 u/L</td>
+                                            <td><input asp-for="CholesterolSi.Ckmb" type="number" step=".1" min="0" class="form-control" style="width: 100%;"></td>
+                                            <td colspan="2"> up to 16 u/L</td>
                                         </tr>
 
                                         <tr>
                                             <td>Sodium</td>
-                                            <td></td>
-                                            <td><input asp-for="CholesterolSi.Sodium" type="number" step=".1" min="0" class="form-control"></td>
-                                            <td></td>
-                                            <td> 135 - 148 mmol/L</td>
+                                            <td><input asp-for="CholesterolSi.Sodium" type="number" step=".1" min="0" class="form-control" style="width: 100%;"></td>
+                                            <td colspan="2"> 135 - 148 mmol/L</td>
                                         </tr>
 
                                         <tr>
                                             <td>Potassium</td>
-                                            <td></td>
-                                            <td><input asp-for="CholesterolSi.Potassium" type="number" step=".1" min="0" class="form-control"></td>
-                                            <td></td>
-                                            <td> 3.5 - 5.3 mmol/L</td>
+                                            <td><input asp-for="CholesterolSi.Potassium" type="number" step=".1" min="0" class="form-control" style="width: 100%;"></td>
+                                            <td colspan="2"> 3.5 - 5.3 mmol/L</td>
                                         </tr>
 
                                         <tr>
                                             <td>Chloride</td>
-                                            <td></td>
-                                            <td><input asp-for="CholesterolSi.Chloride" type="number" step=".1" min="0" class="form-control"></td>
-                                            <td></td>
-                                            <td> 98 - 107 mmol/L</td>
+                                            <td><input asp-for="CholesterolSi.Chloride" type="number" step=".1" min="0" class="form-control" style="width: 100%;"></td>
+                                            <td colspan="2"> 98 - 107 mmol/L</td>
                                         </tr>
 
                                         <tr>
                                             <td>Ionized Calcium</td>
-                                            <td></td>
-                                            <td><input asp-for="CholesterolSi.IonizedCalcium" type="number" step=".1" min="0" class="form-control"></td>
-                                            <td></td>
-                                            <td> 1.13 - 1.31 mmol/L</td>
+                                            <td><input asp-for="CholesterolSi.IonizedCalcium" type="number" step=".1" min="0" class="form-control" style="width: 100%;"></td>
+                                            <td colspan="2"> 1.13 - 1.31 mmol/L</td>
                                         </tr>
 
                                         <tr>
                                             <td>Remarks</td>
-                                            <td colspan="4"><input asp-for="CholesterolSi.Remarks" type="text" class="form-control"></td>
+                                            <td colspan="4"><input asp-for="CholesterolSi.Remarks" type="text" class="form-control" style="width: 100%;" /></td>
                                         </tr>
 
                                         <tr>
                                             <td>Other Remarks</td>
-                                            <td colspan="4"><input asp-for="CholesterolSi.OtherRemarks" type="text" class="form-control"></td>
+                                            <td colspan="4"><input asp-for="CholesterolSi.OtherRemarks" type="text" class="form-control" style="width: 100%;" /></td>
                                         </tr>
                                         </tbody>
                                     </table>
