UI changes for Urinalysis

--- a/UnivMedicalRecord/Pages/LaboratoryRecord/AddLab.cshtml
+++ b/UnivMedicalRecord/Pages/LaboratoryRecord/AddLab.cshtml
@@ -731,14 +731,14 @@ else
                         <tr>
                             <td>Remarks</td>
                             <td colspan="4">
-                                <input asp-for="Remarks" type="text" class="form-control" style="width: 100%;"/>
+                                <input asp-for="RemarksSi" type="text" class="form-control" style="width: 100%;"/>
                             </td>
                         </tr>
 
                         <tr>
                             <td>Other Remarks</td>
                             <td colspan="4">
-                                <input asp-for="OtherRemarks" type="text" class="form-control" style="width: 100%;"/>
+                                <input asp-for="OtherRemarksSi" type="text" class="form-control" style="width: 100%;"/>
                             </td>
                         </tr>
 
